<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Utilizar o MaterialCardView -->
        <!-- MarginEnd é 16dp -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_welcome_login_register_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_welcome_login_register_skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/skip"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/ic_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_welcome_login_register_skip"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_welcome_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/welcome_login_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_welcome_login_register_skip" />

        <TextView
            android:id="@+id/tv_welcome_login_register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:padding="4dp"
            android:text="@string/welcome_login_register_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_welcome_login_register" />

        <TextView
            android:id="@+id/tv_welcome_login_register_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/welcome_login_register_subtitle"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_login_register_title" />
        <!-- Aqui também deve ter o bias, pois em caso de uma tela maior, os botões vão se separar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtb_welcome_login_register_create_account"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/label_register"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_login_register_subtitle" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/label_already_have_account"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtb_welcome_login_register_create_account"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>