<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/welcome_02"
            android:id="@+id/iv_welcome_two_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="380dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_two_title"
            android:id="@+id/tv_welcome_two_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_welcome_two_logo"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="250dp"
            android:padding="4dp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_two_subtitle"
            android:id="@+id/tv_welcome_two_subtitle"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_two_title"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mtb_welcome_two_start"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_two_subtitle"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="60dp"
            app:layout_constraintVertical_bias="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/azul"
            android:fontFamily="@font/poppins"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>