<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <!--
    Criar conta no topo tá mal alinhado
    os botões também não estão legais com esses icones
    são 2 cards (ñ sei se dá pra fazer com button)
    então eles ficam de tamanho diferente do botão mesmo dando o mesmo tamanho
    e falta mais uns detalhes eu acho kk
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_register_ic_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_register_one_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:padding="4dp"
            android:text="@string/label_register"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_register_ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_register_one"
            android:layout_width="266dp"
            android:layout_height="266dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="54dp"
            android:src="@drawable/register_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_one_create_account" />

        <TextView
            android:id="@+id/tv_register_one_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:padding="4dp"
            android:text="@string/register_one_title"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_register_one" />

        <TextView
            android:id="@+id/tv_register_one_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="4dp"
            android:text="@string/register_one_subtitle"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_one_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_register_one_apple"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_one_subtitle"
            app:layout_constraintVertical_bias="1"
            app:strokeColor="@color/gray_light"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_register_one_apple"
                    android:layout_width="22dp"
                    android:layout_height="26dp"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/ic_apple"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:padding="4dp"
                    android:text="@string/register_apple"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_register_one_apple"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_register_one_google"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:padding="16dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcv_register_one_apple"
            app:strokeColor="@color/gray_light"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_register_one_google"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="32dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:padding="4dp"
                    android:text="@string/register_google"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_register_one_google"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtb_register_one_email"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/blue"
            android:text="@string/register_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcv_register_one_google"
            app:layout_constraintVertical_bias="0"
            app:strokeColor="@color/blue"
            app:strokeWidth="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>